# EmbedX

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rag_api_project_blueprint.md  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py  schemas.py
app/data/: query_log.jsonl
app/routers/: analytics.py  conversations.py  documents.py  explain.py  flashcards.py  ingest.py  mindmap.py  pdf_mindmap.py  query.py
app/services/: chunker.py  embedder.py  llm_client.py  mindmap.py  retriever.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: badge.test.tsx  button.test.tsx  utils.test.ts
frontend/src/api/: client.ts
frontend/src/components/layout/: layout.tsx  sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx
frontend/src/components/visualization/: search-viz.tsx
frontend/src/hooks/: use-conversations.ts  use-health.ts  use-ingest.ts  use-query.ts
frontend/src/pages/: analytics.tsx  dashboard.tsx  documents.tsx  flashcards.tsx  mindmap.tsx  pdf-mindmap.tsx  query.tsx
tests/: conftest.py  test_analytics.py  test_chunker.py  test_conversations.py  test_documents.py  test_embedder.py  test_endpoints.py  test_model_quality.py  test_query_filter.py  test_retriever.py  test_vector_store.py
tests/data/: holdout_qa.json
